--- a/index.html
+++ b/index.html
@@ -1,140 +1,137 @@
 <!DOCTYPE html>
 <html lang="es">
-	<head>
-		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width,initial-scale=1.0" name="viewport">
-		<meta content="" name="keywords">
-  	<meta content="" name="description">
-  	<link href="img/icono.ico" rel="apple-touch-icon">
-		<link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Quicksand:500,700&amp;display=swap" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="styles/style.css">
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-		<title>ACOBIJARNOS</title>
-		<link rel="icon" type="image/ico" href="img/icono.ico">
-	</head>
-	<body>
-		<div id="back-tela"></div>
-		<div id="back"></div>
-		<header id="header">
-			<div class="row">
-				<div id="logo-contenedor" class="col-4 d-flex">
-					<img id="iso" src="img/isotipo.png" alt="isotipo de acobijarnos">
-					<img id="logotipo" src="img/logotipo.png" alt="logo de acobijarnos">
-				</div>
-				<nav id="nav-menu-container" class="col-8">
-					<ul class="nav-menu sf-js-enabled sf-arrows" id="lista">
-						<li class="menu-active"> <a href="#inicio" class="menu-item">Bienvenido</a></li>
-						<li> <a href="#about" class="menu-item">Nosotros</a></li>
-						<li> <a href="#detail" class="menu-item">Lo que hacemos</a></li>
-						<li> <a href="#donation" class="menu-item">Donaciones</a></li>
-						<li> <a href="#contact" class="menu-item">Contactanos</a></li>
-					</ul>
-				</nav>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0" name="viewport">
+	<meta content="" name="keywords">
+	<meta content="" name="description">
+	<meta name="mobile-web-app-capable" content="yes">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<link href="img/icono.ico" rel="apple-touch-icon">
+	<link href="https://fonts.googleapis.com/css?family=Gochi+Hand|Quicksand:500,700&amp;display=swap" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="styles/style.css">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+	<title>ACOBIJARNOS</title>
+	<link rel="icon" type="image/ico" href="img/icono.ico">
+</head>
+<body>
+	<div id="back-tela"></div>
+	<div id="back"></div>
+	<header id="header">
+		<div class="row">
+			<div id="logo-contenedor" class="col-4 d-flex">
+				<img id="iso" src="img/isotipo.png" alt="isotipo de acobijarnos">
+				<img id="logotipo" src="img/logotipo.png" alt="logo de acobijarnos">
 			</div>
-		</header>
-		<main id="main">
-			<section id="inicio">
-			</section>
-			<section id="about">
-				<div class="container">
-					<h2 class="title text-center">QUIENES SOMOS</h2>
-					<p class="info">
-						'Acobijarnos' surge en el año 2017, fundada por Virginia Jordan, una voluntaria del Hospital Materno Infantil de Tigre, quién tenía mucho entusiasmo y ganas de ayudar a bebés de familias en situación vulnerable.
-					</p>
-					<div class="row text-center">
-						<div class="col-4 tarjeta">
-							<img src="img/bebe1.png" alt="foto de bebe">
-							<h3>Nuestra <span class="title-m">Mision</span></h3>
-							<p>Trabajar y colaborar con compromiso para una mejor calidad de vida de los bebes que integran familias de bajos recursos en las diferentes maternidades de centros de salud públicos. Para esto nuestra fundación elabora tejidos para los bebes recién nacidos de la Maternidad de Tigre.</p>
-						</div>
-						<div class="col-4 tarjeta">
-							<img src="img/bebe2.png" alt="foto de bebe">
-							<h3>Nuestra <span class="title-m">Vision</span> </h3>
-							<p>Buscamos que haya cada vez más voluntari@s que se sumen a nuestra fundación, consolidando esta organización y perdurando a través del tiempo. Aspiramos a ser una fundación referente en la promoción del vínculo entre la madre y el bebé, cuidando con actitud a las personas más vulnerables.</p>
-						</div>
-						<div class="col-4 tarjeta">
-							<img src="img/bebe3.png" alt="foto de bebe">
-							<h3>Nuestros <span class="title-m">Valores</span></h3>
-							<ul>
-								<li>Compromiso Social</li>
-								<li>Responsabilidad</li>
-								<li>Esfuerzo</li>
-								<li>Calidez</li>
-								<li>Amor</li>
-							</ul>
-						</div>
+			<div id="btn-menu"><i class="fas fa-bars"></i></div>
+			<div id="overlay"></div>
+			<nav id="nav-menu-container" class="col-8">
+				<ul class="nav-menu sf-js-enabled sf-arrows" id="lista">
+					<li class="menu-active"> <a href="#inicio" class="menu-item">Bienvenido</a></li>
+					<li> <a href="#about" class="menu-item">Nosotros</a></li>
+					<li> <a href="#detail" class="menu-item">Lo que hacemos</a></li>
+					<li> <a href="#contact" class="menu-item">Contactanos</a></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main id="main">
+		<section id="inicio">
+		</section>
+		<section id="about">
+			<div class="container">
+				<h2 class="title text-center">QUIENES SOMOS</h2>
+				<p class="info">
+					'Acobijarnos' surge en el año 2017, fundada por Virginia Jordan, una voluntaria del Hospital Materno Infantil de Tigre, quién tenía mucho entusiasmo y ganas de ayudar a bebés de familias en situación vulnerable.
+				</p>
+				<div class="row text-center">
+					<div class="col-md-4 col-10 tarjeta">
+						<img src="img/bebe1.png" alt="foto de bebe">
+						<h3>Nuestra <span class="title-m">Mision</span></h3>
+						<p>Trabajar y colaborar con compromiso para una mejor calidad de vida de los bebes que integran familias de bajos recursos en las diferentes maternidades de centros de salud públicos. Para esto nuestra fundación elabora tejidos para los bebes recién nacidos de la Maternidad de Tigre.</p>
+					</div>
+					<div class="col-md-4 col-10 tarjeta">
+						<img src="img/bebe2.png" alt="foto de bebe">
+						<h3>Nuestra <span class="title-m">Vision</span> </h3>
+						<p>Buscamos que haya cada vez más voluntari@s que se sumen a nuestra fundación, consolidando esta organización y perdurando a través del tiempo. Aspiramos a ser una fundación referente en la promoción del vínculo entre la madre y el bebé, cuidando con actitud a las personas más vulnerables.</p>
+					</div>
+					<div class="col-md-4 col-10 tarjeta">
+						<img src="img/bebe3.png" alt="foto de bebe">
+						<h3>Nuestros <span class="title-m">Valores</span></h3>
+						<ul>
+							<li>Compromiso Social</li>
+							<li>Responsabilidad</li>
+							<li>Esfuerzo</li>
+							<li>Calidez</li>
+							<li>Amor</li>
+						</ul>
 					</div>
 				</div>
-			</section>
-			<section id="detail"> 
-				<div class="container">
-					<h2 class="title text-center">QUE HACEMOS</h2>
-					<p class="info">Somos una organización sin fines de lucro que ayuda a los bebés recién nacidos, internados en la maternidad de Tigre, pertenecientes a familias que se encuentran en situaciones vulnerables.</p>
-					<div class="row">
-						<div class="col-3 mini-tela">
-							<img src="img/trabajo1.jpg" alt="foto de trabajo">
-						</div>
-						<div class="col-3 mini-tela vacio"></div>
-						<div class="col-3 mini-tela">
-							<img src="img/trabajo2.jpg" alt="foto de trabajo">
-						</div>
-						<div class="col-3 mini-tela vacio"></div>
+			</div>
+		</section>
+		<section id="detail"> 
+			<div class="container">
+				<h2 class="title text-center">QUE HACEMOS</h2>
+				<p class="info">Somos una organización sin fines de lucro que ayuda a los bebés recién nacidos, internados en la maternidad de Tigre, pertenecientes a familias que se encuentran en situaciones vulnerables.</p>
+				<div class="row">
+					<div class="col-md-3 col-10 mini-tela">
+						<img src="img/trabajo1.jpg" alt="foto de trabajo">
 					</div>
-					<div class="row">
-						<div class="col-3 mini-tela vacio"></div>
-						<div class="col-3 mini-tela">
-							<img src="img/trabajo3.jpg" alt="foto de trabajo">
-						</div>
-						<div class="col-3 mini-tela vacio"></div>
-						<div class="col-3 mini-tela">
-							<img src="img/trabajo4.jpg" alt="foto de trabajo">
-						</div>
+					<div class="col-md-3 col-10 mini-tela vacio"></div>
+					<div class="col-md-3 col-10 mini-tela">
+						<img src="img/trabajo2.jpg" alt="foto de trabajo">
+					</div>
+					<div class="col-md-3 col-10 mini-tela vacio"></div>
+				</div>
+				<div class="row">
+					<div class="col-md-3 col-10 mini-tela vacio"></div>
+					<div class="col-md-3 col-10 mini-tela">
+						<img src="img/trabajo3.jpg" alt="foto de trabajo">
+					</div>
+					<div class="col-md-3 col-10 mini-tela vacio"></div>
+					<div class="col-md-3 col-10 mini-tela">
+						<img src="img/trabajo4.jpg" alt="foto de trabajo">
 					</div>
 				</div>
-			</section>
-			<section id="donation">
-				<div class="container">
-					<h2 class="title text-center">DONACIONES</h2>
-					<p class="info">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed eiusmod tempor incidunt 
-					ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco 
-					laboris nisi ut aliquid ex ea commodi consequat. Quis aute iure reprehenderit in voluptate velit
-					esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt
-					in culpa qui officia deserunt mollit anim id est</p>
-				</div>	
-			</section>
+			</div>
+		</section>
 			<section id="contact">
 				<div class="container">
-					<div class="row">
-						<h2 class="title text-center col-5">CONTACTO</h2>
-						<h2 class="title text-center col-7">REDES SOCIALES</h2>
+					<div class="mt-5">
+						<h2 class="title text-center">CONTACTO</h2>
+						<div class="contact-wrap d-flex justify-content-around">
+							<div class="contacto d-flex flex-column align-items-center">
+								<img class="contact-icon" src="img/gmail.png" alt="">
+								<div class="contact-text">acobijarnos@gmail.com</div>
+							</div>
+							<div class="contacto d-flex flex-column align-items-center">
+								<img class="contact-icon" src="img/whatsapp.png" alt="">
+								<div class="contact-text">+54-1160544196</div>
+							</div>
+						</div>
 					</div>
-					
-					<div class="d-flex justify-content-around">
-						<div class="contacto d-flex flex-column align-items-center">
-							<img class="contact-icon" src="img/gmail.png" alt="">
-							<div class="contact-text">acobijarnos@gmail.com</div>
-						</div>
-						<div class="contacto d-flex flex-column align-items-center">
-							<img class="contact-icon" src="img/whatsapp.png" alt="">
-							<div class="contact-text">+54-1160544196</div>
-						</div>
-						<div class="contacto ">
-							<a href="https://www.facebook.com/Acobijarnos" class="d-flex flex-column align-items-center">
-								<img class="contact-icon" src="img/facebook.png" alt="">
-								<div class="contact-text">ACOBIJARNOS</div></a>
-						</div>
-						<div class="contacto">
-							<a href="https://www.instagram.com/acobijarnos/" class=" d-flex flex-column align-items-center">
-								<img class="contact-icon" src="img/instagram.png" alt="">
-								<div class="contact-text">ACOBIJARNOS</div>
-							</a>
-						</div>
-						<div class="contacto ">
-							<a href="https://www.linkedin.com/company/acobijarnos/about" class="d-flex flex-column align-items-center">
-								<img class="contact-icon" src="img/linkedin.png" alt="">
-								<div class="contact-text">ACOBIJARNOS</div>
-							</a>
+					<div class="mt-5">
+						<h2 class="title text-center">REDES SOCIALES</h2>
+						<div class="contact-wrap d-flex justify-content-around">
+							<div class="contacto ">
+								<a href="https://www.facebook.com/Acobijarnos" class="d-flex flex-column align-items-center">
+									<img class="contact-icon" src="img/facebook.png" alt="">
+									<div class="contact-text">ACOBIJARNOS</div>
+								</a>
+							</div>
+							<div class="contacto">
+								<a href="https://www.instagram.com/acobijarnos/" class=" d-flex flex-column align-items-center">
+									<img class="contact-icon" src="img/instagram.png" alt="">
+									<div class="contact-text">ACOBIJARNOS</div>
+								</a>
+							</div>
+							<div class="contacto ">
+								<a href="https://www.linkedin.com/company/acobijarnos/about" class="d-flex flex-column align-items-center">
+									<img class="contact-icon" src="img/linkedin.png" alt="">
+									<div class="contact-text">ACOBIJARNOS</div>
+								</a>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -153,4 +150,4 @@
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js" integrity="sha256-H3cjtrm/ztDeuhCN9I4yh4iN2Ybx/y1RM7rMmAesA0k=" crossorigin="anonymous"></script>
 		<script src="js/main.js"></script>
 	</body>
-</html>
+	</html>
