--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 				<ul class="nav-menu sf-js-enabled sf-arrows" id="lista">
 					<li class="menu-active"> <a href="#inicio" class="menu-item">Bienvenido</a></li>
 					<li> <a href="#about" class="menu-item">Nosotros</a></li>
-					<li> <a href="#detail" class="menu-item">Lo que hacemos</a></li>
+					<li> <a href="#detail" class="menu-item">Que hacemos</a></li>
 					<li> <a href="#contact" class="menu-item">Contactanos</a></li>
 				</ul>
 			</nav>
